cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(img_convert LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQURIED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(OpenCV REQUIRED)
add_executable(img_convert source/img_convert.cpp)
include_directories({CMAKE_SOURCE_DIR} ${OpenCV_INCLUDE_DIRS})
target_link_libraries(img_convert ${OpenCV_LIBS})
install(TARGETS img_convert DESTINATION bin)